Border-radius on mobile fixed

--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -130,7 +130,7 @@
     }
 
     &__title {
-      margin-bottom: 50px;
+      margin: 0 auto 35px;
     }
 
     &__img {
@@ -147,6 +147,9 @@
   @media (max-width: $break-point-xs) {
     & {
       padding: 80px 20px;
+
+      border-top-left-radius: $border-radius-md;
+      border-bottom-left-radius: $border-radius-md;
     }
 
     &__title {
