--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -78,6 +78,8 @@
     &__outer {
       height: 100%;
       padding: 60px 20px 250px;
+
+      border-top-right-radius: $border-radius-md;
     }
 
     &__content {
