--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -157,6 +157,10 @@
   }
 
   @media (max-width: $break-point-xs) {
+    & {
+      border-bottom-left-radius: $border-radius-md;
+    }
+
     &__title {
       font-size: $font-size-mobile-xl;
     }
@@ -280,7 +284,7 @@
   }
 
   .header--opened {
-    border-bottom-left-radius: $border-radius-md;
+    border-bottom-left-radius: $border-radius-sm;
 
     .navigation {
       left: 20px;
